@@ -94,6 +94,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|schema
 operator|.
 name|FieldType
@@ -150,6 +164,12 @@ specifier|final
 name|QParser
 name|parser
 decl_stmt|;
+DECL|field|defaultField
+specifier|protected
+specifier|final
+name|String
+name|defaultField
+decl_stmt|;
 comment|/**    * Constructs a SolrQueryParser using the schema to understand the    * formats and datatypes of each field.  Only the defaultSearchField    * will be used from the IndexSchema (unless overridden),    *&lt;solrQueryParser&gt; will not be used.    *     * @param schema Used for default search field name if defaultField is null and field information is used for analysis    * @param defaultField default field used for unspecified search terms.  if null, the schema default field is used    * @see IndexSchema#getSolrQueryParser(String defaultField)    */
 DECL|method|SolrQueryParser
 specifier|public
@@ -192,6 +212,12 @@ operator|.
 name|parser
 operator|=
 literal|null
+expr_stmt|;
+name|this
+operator|.
+name|defaultField
+operator|=
+name|defaultField
 expr_stmt|;
 name|setLowercaseExpandedTerms
 argument_list|(
@@ -244,11 +270,54 @@ name|parser
 operator|=
 name|parser
 expr_stmt|;
+name|this
+operator|.
+name|defaultField
+operator|=
+name|defaultField
+expr_stmt|;
 name|setLowercaseExpandedTerms
 argument_list|(
 literal|false
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|checkNullField
+specifier|private
+name|void
+name|checkNullField
+parameter_list|(
+name|String
+name|field
+parameter_list|)
+throws|throws
+name|SolrException
+block|{
+if|if
+condition|(
+name|field
+operator|==
+literal|null
+operator|&&
+name|defaultField
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"no field name specified in query and no defaultSearchField defined in schema.xml"
+argument_list|)
+throw|;
+block|}
 block|}
 DECL|method|getFieldQuery
 specifier|protected
@@ -264,6 +333,11 @@ parameter_list|)
 throws|throws
 name|ParseException
 block|{
+name|checkNullField
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
 comment|// intercept magic field name of "_" to use as a hook for our
 comment|// own functions.
 if|if
@@ -390,6 +464,11 @@ parameter_list|)
 throws|throws
 name|ParseException
 block|{
+name|checkNullField
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
 name|FieldType
 name|ft
 init|=
@@ -458,6 +537,11 @@ parameter_list|)
 throws|throws
 name|ParseException
 block|{
+name|checkNullField
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|getLowercaseExpandedTerms
